# libqalculate

./: .gitignore  README.md  meson.build  meson.options
data/: meson.build  meson.gen-defs.py
libqalculate/: BuiltinFunctions-matrixvector.cc  BuiltinFunctions.h  Calculator-convert.cc  Calculator.cc  meson.build
po/: LINGUAS  meson.build
po-defs/: LINGUAS  meson.build
src/: meson.build  unittest.cc
