option('compiled_definitions', type : 'boolean', value : false)
option('insecure', type : 'boolean', value : true)
option('use-nls', type : 'boolean', value : true)
option('with-libcurl', type : 'feature', value : 'enabled')
option('with-icu', type : 'feature', value : 'enabled')
option('with-gnuplot-call', type : 'combo', choices : ['no', 'yes', 'byo'], value : 'yes')
option('with-readline', type : 'feature', value : 'enabled')
