option('compiled_definitions', type: 'boolean', value: false)
option('insecure', type: 'boolean', value: true)
option('use_nls', type: 'boolean', value: true)
option('with_libcurl', type: 'feature', value: 'enabled')
option('with_icu', type: 'feature', value: 'enabled')
option('with_gnuplot_call', type: 'combo', choices: ['no', 'yes', 'byo'], value: 'yes')
option('with_readline', type: 'feature', value: 'enabled')
